@startuml
hide methods
hide stereotypes
top to bottom direction

skinparam backgroundColor white
skinparam classBackgroundColor #F9FBFC
skinparam classBorderColor #2F4858
skinparam classArrowColor #2F4858
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 22
skinparam ranksep 24
skinparam dpi 180
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam packageFontSize 12

legend top left
  Обозначения: PK - первичный ключ, FK - внешний ключ,
  UQ - уникальное значение, NN - NOT NULL.
endlegend

title Таблицы сервиса poprog_kb\nPostgreSQL 18.3, schema public

package "schema: main / Liquibase migrations" as main_schema {

entity "databasechangelog" as databasechangelog {
  * id : VARCHAR(255) <<NN>>
  * author : VARCHAR(255) <<NN>>
  * filename : VARCHAR(255) <<NN>>
  --
  dateexecuted : TIMESTAMP <<NN>>
  orderexecuted : INTEGER <<NN>>
  exectype : VARCHAR(10) <<NN>>
  md5sum : VARCHAR(35)
  description : VARCHAR(255)
  comments : VARCHAR(255)
  tag : VARCHAR(255)
  liquibase : VARCHAR(20)
  contexts : VARCHAR(255)
  labels : VARCHAR(255)
  deployment_id : VARCHAR(10)
}

entity "databasechangeloglock" as databasechangeloglock {
  * id : INTEGER <<PK>>
  --
  locked : BOOLEAN <<NN>>
  lockgranted : TIMESTAMP
  lockedby : VARCHAR(255)
}

}

package "schema: public / service tables" as public_schema {

entity "chat_conversation" as chat_conversation {
  * id : UUID <<PK>>
  --
  created_at : TIMESTAMPTZ <<NN>>
  owner_sub : VARCHAR(128)
}

entity "chat_message" as chat_message {
  * id : BIGSERIAL <<PK>>
  --
  chat_id : UUID <<FK, NN>>
  role : VARCHAR(16) <<NN>>
  content : TEXT <<NN>>
  created_at : TIMESTAMPTZ <<NN>>
  widget_payload : TEXT
}

entity "user_account" as user_account {
  * id : BIGSERIAL <<PK>>
  --
  keycloak_sub : VARCHAR(128) <<UQ, NN>>
  name : VARCHAR(120) <<NN>>
  email : VARCHAR(254) <<NN>>
  created_at : TIMESTAMPTZ <<NN>> = now()
  updated_at : TIMESTAMPTZ <<NN>> = now()
}

entity "favorite_item" as favorite_item {
  * id : BIGSERIAL <<PK>>
  --
  user_sub : VARCHAR(128) <<NN>>
  item_type : VARCHAR(32) <<NN>>
  item_id : VARCHAR(128) <<NN>>
  title : VARCHAR(255) <<NN>>
  link : VARCHAR(2048)
  created_at : TIMESTAMPTZ <<NN>> = now()
}

entity "donation_payment" as donation_payment {
  * id : UUID <<PK>>
  --
  user_sub : VARCHAR(128)
  amount : NUMERIC(12,2) <<NN>>
  currency : CHAR(3) <<NN>>
  status : VARCHAR(32) <<NN>>
  source : VARCHAR(255)
  message : VARCHAR(1000)
  provider_payment_id : VARCHAR(128) <<UQ>>
  confirmation_url : VARCHAR(4096)
  return_url : VARCHAR(2048) <<NN>>
  created_at : TIMESTAMPTZ <<NN>>
  updated_at : TIMESTAMPTZ <<NN>>
  paid_at : TIMESTAMPTZ
}

entity "product_metric_event" as product_metric_event {
  * id : BIGSERIAL <<PK>>
  --
  event_type : VARCHAR(64) <<NN>>
  route : VARCHAR(255) <<NN>>
  referrer : VARCHAR(2048)
  session_id : VARCHAR(128) <<NN>>
  user_key : VARCHAR(128) <<NN>>
  timestamp_client : TIMESTAMPTZ <<NN>>
  timestamp_server : TIMESTAMPTZ <<NN>>
  payload_json : TEXT <<NN>> = '{}'
}

entity "site_feedback" as site_feedback {
  * id : BIGSERIAL <<PK>>
  --
  helpful : BOOLEAN <<NN>>
  source : VARCHAR(255)
  comment : TEXT
  created_at : TIMESTAMPTZ <<NN>> = now()
  user_name : VARCHAR(255)
  user_email : VARCHAR(254)
  user_agent : VARCHAR(512)
  ip_address : VARCHAR(64)
}

entity "publication" as publication {
  * id : BIGSERIAL <<PK>>
  --
  publication_year : INTEGER <<NN>>
  authors : TEXT <<NN>>
  theme : TEXT <<NN>>
  published : TEXT <<NN>>
  link : TEXT <<NN>> = ''
  pdf_text : TEXT
}

entity "project_type" as project_type {
  * id : BIGSERIAL <<PK>>
  --
  title : TEXT <<UQ, NN>>
  hash : TEXT <<UQ, NN>>
}

entity "student_work" as student_work {
  * id : BIGSERIAL <<PK>>
  --
  project_type_id : BIGINT <<FK, NN>>
  authors : TEXT <<NN>>
  theme : TEXT <<NN>>
  published : TEXT <<NN>>
  document_link : TEXT
  pdf_text : TEXT
}

entity "project_menu_section" as project_menu_section {
  * id : BIGSERIAL <<PK>>
  --
  hash : VARCHAR(128) <<UQ, NN>>
  title : VARCHAR(255) <<NN>>
  description : TEXT <<NN>>
  cta_title : VARCHAR(255) <<NN>>
  cta_url : VARCHAR(512) <<NN>>
  sort_order : INTEGER <<NN>>
}

entity "project_menu_item" as project_menu_item {
  * id : BIGSERIAL <<PK>>
  --
  section_id : BIGINT <<FK, NN>>
  title : VARCHAR(255) <<NN>>
  description : TEXT <<NN>>
  url : VARCHAR(512) <<NN>>
  image_url : VARCHAR(512)
  highlighted : BOOLEAN <<NN>> = false
  sort_order : INTEGER <<NN>>
}

entity "project_menu_promo" as project_menu_promo {
  * id : BIGSERIAL <<PK>>
  --
  section_id : BIGINT <<FK, NN>>
  title : VARCHAR(255) <<NN>>
  description : TEXT <<NN>>
  url : VARCHAR(512) <<NN>>
  image_url : VARCHAR(512) <<NN>>
  sort_order : INTEGER <<NN>>
}

}

' Visible FK relations.
chat_conversation ||--o{ chat_message
project_type ||--o{ student_work
project_menu_section ||--o{ project_menu_item
project_menu_section ||--o{ project_menu_promo

' Invisible layout relations for a compact half-page A4 grid.
databasechangelog -[hidden]right- databasechangeloglock
databasechangeloglock -[hidden]down- chat_conversation

chat_conversation -[hidden]right- chat_message
chat_message -[hidden]right- user_account
user_account -[hidden]right- favorite_item

donation_payment -[hidden]right- product_metric_event
product_metric_event -[hidden]right- site_feedback
site_feedback -[hidden]right- publication

project_type -[hidden]right- student_work
student_work -[hidden]right- project_menu_section
project_menu_section -[hidden]right- project_menu_item
project_menu_section -[hidden]down- project_menu_promo

chat_conversation -[hidden]down- donation_payment
donation_payment -[hidden]down- project_type
chat_message -[hidden]down- product_metric_event
product_metric_event -[hidden]down- student_work
user_account -[hidden]down- site_feedback
site_feedback -[hidden]down- project_menu_section
favorite_item -[hidden]down- publication
publication -[hidden]down- project_menu_item

@enduml
